--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 
 <body id="top">
+    
 
 
     <!-- preloader
@@ -95,11 +96,10 @@
                     <div class="column lg-12 s-intro__content-inner">
                         <div class="s-intro__content-left">
                             <h1 class="s-intro__content-title">
-                            An Amazing App <br>
-                            That Does It All.
+                                Your Vision, Our Assurance <br> Begin Your Business Risk-Free with us.
                             </h1>
                         </div>
-                        <div class="s-intro__content-right">
+                        <!-- <div class="s-intro__content-right">
                             <p class="s-intro__content-desc body-text-2">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             Mattis lacus interdum dictum dolor sit amet lectus ornare nunc non.
@@ -111,7 +111,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M7 6v12l10-6z"></path></svg>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div> <!-- s-intro__content-inner -->
 
                 </div> <!-- s-intro__content -->
